--- a/app/templates/institution/index.hbs
+++ b/app/templates/institution/index.hbs
@@ -85,7 +85,7 @@
     <div class="perfil-container">
       <div class="border panel">
         <div class="header d-flex">
-            <img src="img/logo-libro.png" alt="Servicios" class="image60x60"><h3 class="my-auto mx-5">Servicios</h3>
+            <img src="img/logo-libro.png" alt="Servicios" class="image60x60"><h3 class="my-auto mx-5">Desempeño</h3>
           </div>
         <div class="panel-body tabla-gradacion-content">
           {{#each model.services as |service|}}
